; ModuleID = '/home/carl/AnghaBench/radare2/libr/magic/extr_softmagic.c_mdebug.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/magic/extr_softmagic.c_mdebug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"mget @%d: \00", align 1
@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i64)* @mdebug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mdebug(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @eprintf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* @stderr, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @file_showstr(i32 %9, i8* %10, i64 %11)
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fputc(i8 signext 10, i32 %13)
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 @fputc(i8 signext 10, i32 %15)
  ret void
}

declare dso_local i32 @eprintf(i8*, i32) #1

declare dso_local i32 @file_showstr(i32, i8*, i64) #1

declare dso_local i32 @fputc(i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
